[metadata]
name = leonardo_api
version = attr: leonardo_api.0.0.3
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/leonardo_api
description = Leonardo.ai Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = leonardo, leonardo.ai, image generation, stablediffusion, api
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    requests
    aiohttp
    aiofiles
    asyncio
    requests
    urllib3
    async-timeout
    certifi
    charset-normalizer
    frozenlist

[options.package_data]
* = README.md