[metadata]
name = leonardo_api
version = attr: leonardo_api.0.0.5
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/leonardo_api
description = Leonardo.ai Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = leonardo, leonardo.ai, image generation, stablediffusion, api
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    requests
    aiohttp
    aiofiles
    asyncio
    requests
    urllib3
    async-timeout
    certifi
    charset-normalizer
    frozenlist

[options.package_data]
* = README.md

[flake8]
max-line-length = 120
extend-ignore = Q000,WPS306,I001,I005,WPS229,D400,WPS317,S101,WPS507,DAR201,DAR101,WPS112,F401,WPS300,WPS412,DAR301,D401,D205,WPS615,I004,WPS110,WPS420,C812,WPS305,WPS226,DAR401,WPS237
