[metadata]
name = leonardo_api
version = attr: leonardo_api.0.0.9
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
maintainer = Iliya Vereshchagin
maintainer_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/leonardo_api
description = Leonardo.ai Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = leonardo, leonardo.ai, image generation, stablediffusion, api, llm, ai, artificial intelligence
license = MIT License
python_requires = >=3.9
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization

[options]
install_requires =
    requests
    aiohttp
    aiofiles
    asyncio
    requests
    urllib3
    async-timeout
    certifi
    charset-normalizer
    frozenlist

[options.package_data]
* = README.md

[flake8]
max-line-length = 120
extend-ignore = Q000,WPS306,I001,I005,WPS229,D400,WPS317,S101,WPS507,DAR201,DAR101,WPS112,F401,WPS300,WPS412,DAR301,D401,D205,WPS615,I004,WPS110,WPS420,C812,WPS305,WPS226,DAR401,WPS237
